# spbu-programming

./: .gitignore  LICENSE  README.md
.github/: workflow.yml
.github/workflows/: workflow.yml
1st-semester/binaryRepresentation-hw/: binaryRepresentation.c  tests.c
1st-semester/dynamicStructures/shuntingYard/: CMakeLists.txt
1st-semester/dynamicStructures/shuntingYard/include/: shuntingYard.h
1st-semester/dynamicStructures/shuntingYard/queue/include/: queue.h
1st-semester/dynamicStructures/shuntingYard/src/: ioAuxiliaries.c  tokens.c
1st-semester/dynamicStructures/shuntingYard/stackOnPointers/: CMakeLists.txt
1st-semester/dynamicStructures/shuntingYard/stackOnPointers/include/: stack.h
1st-semester/dynamicStructures/shuntingYard/tests/: tests.c
1st-semester/hashtable-hw/hashtable/: CMakeLists.txt
1st-semester/hashtable-hw/hashtable/Hashtable/include/: hashtable.h
1st-semester/hashtable-hw/hashtable/Hashtable/src/: main.c
1st-semester/hashtable-hw/hashtable/Hashtable/tests/: words
1st-semester/hashtable-hw/hashtable/src/: ioAuxiliaries.c
1st-semester/intro-hw/: array.c  primeNumbers.c  substring.c  swap.c
1st-semester/listADT/mergeSort/: CMakeLists.txt
1st-semester/listADT/mergeSort/include/: ioAuxiliaries.h
1st-semester/listADT/mergeSort/src/: ioAuxiliaries.c
2nd-semester/: README.md
2nd-semester/Functions/: Functions.sln
2nd-semester/LZWHomework/: Compressor.sln
2nd-semester/Routers/: .editorconfig
2st-semester/ExpressionTree/: .editorconfig  ExpressionTree.sln
2st-semester/FinalTest/: FinalTest.sln
2st-semester/LZWHomework/: .editorconfig
2st-semester/MyLinq/: MyLinq.sln
2st-semester/Reversi/: Reversi.vpp
2st-semester/Routers/: Routers.sln
2st-semester/SkipList/: SkipList.sln
2st-semester/SparseVector/: SparseVector.sln
2st-semester/calculator-hw/: .editorconfig  Calculator-hw.sln
2st-semester/test1/: .editorconfig  Task1.sln
3rd-semester/Lazy/: Lazy.sln
3rd-semester/MD5Sum/: MD5Sum.sln
3rd-semester/MyNUnit/: MyNUnit.slnx
3rd-semester/MyThreadPool/: MyThreadPool.sln
3rd-semester/ParallelMatrixMultiplication/: ParallelMatrixMultiplication.sln
3rd-semester/SimpleFTP/: SimpleFTP.sln
4th-semester/EvenNumbersHW/: EvenNumbersHW.slnx
4th-semester/ExpressionTreeHW/: ExpressionTreeHW.slnx
4th-semester/Factorial/: Factorial.fs  Factorial.fsproj
4th-semester/FibonacciHW/: FibonacciHW.slnx
4th-semester/LambdaExpression/: expression.tex
4th-semester/LambdaInterpreterHW/: LambdaInterpreterHW.slnx
4th-semester/ListReverseHW/: ListReverse.slnx
ConsoleChat/: ConsoleChat.slnx
Reflector/: Reflector.slnx
binaryRepresentation-hw/: auxiliaries.c  auxiliaries.h  binaryRepresentation.h  main.c  makefile  tests.h
complexity-hw/: bubbleSort.c  fibonacci.c  halfQSort.c  pow.c
credit/task1/: CMakeLists.txt
credit/task1/include/: binary.h
credit/task1/src/: binary.c  main.c
credit/task1/tests/: tests.c
credit_attempt2/Credit_attempt2_task3/: CMakeLists.txt
credit_attempt2/Credit_attempt2_task3/include/: graph.h
credit_attempt2/Credit_attempt2_task3/src/: graph.c  ioAuxiliaries.c  main.c
credit_attempt2/Credit_attempt2_task3/tests/: graph1  testGraph.c
dynamicStructures/postfixCalculator/: CMakeLists.txt  ioAuxiliaries.c  ioAuxiliaries.h  main.c  postfixCalculator.c  postfixCalculator.h  postfixCalculatorTokens.c  tests.c
dynamicStructures/postfixCalculator/stackOnPointers/: CMakeLists.txt  functions.c  functions.h  stack.c  stack.h
dynamicStructures/postfixCalculator/stackOnPointers/tests/: tests.c
dynamicStructures/shuntingYard/: .gitignore  CMakeLists.txt  main.c  memoryAuxiliaries.h  shuntingYard.c  tokens.c  tokens.h
dynamicStructures/shuntingYard/include/: ioAuxiliaries.h
dynamicStructures/shuntingYard/queue/: CMakeLists.txt  queue.c  queue.h  tests.c
dynamicStructures/shuntingYard/queue/src/: queue.c
dynamicStructures/shuntingYard/queue/tests/: tests.c
dynamicStructures/shuntingYard/src/: ioAuxiliaries.c  main.c  memoryAuxiliaries.c  shuntingYard.c
dynamicStructures/shuntingYard/stackOnPointers/: CMakeLists.txt  stack.c  stack.h
dynamicStructures/shuntingYard/stackOnPointers/src/: stack.c
dynamicStructures/shuntingYard/stackOnPointers/tests/: tests.c  tests.h
hashtable-hw/hashtable/Hashtable/: CMakeLists.txt
hashtable-hw/hashtable/Hashtable/List/: CMakeLists.txt
hashtable-hw/hashtable/Hashtable/List/include/: circularList.h
hashtable-hw/hashtable/Hashtable/List/src/: circularList.c  list.c
hashtable-hw/hashtable/Hashtable/List/tests/: tests.c
hashtable-hw/hashtable/Hashtable/include/: list.h
hashtable-hw/hashtable/Hashtable/src/: hashtable.c
hashtable-hw/hashtable/Hashtable/tests/: testResult  tests.c
intro-hw/: bracketsBalance.c  divide.c  luckyTickets.c  zeroElements.c
listADT/countSicario/List/: CMakeLists.txt
listADT/countSicario/List/include/: circularList.h  list.h
listADT/countSicario/List/src/: circularList.c  list.c
listADT/countSicario/List/tests/: tests.c
listADT/mergeSort/List/: CMakeLists.txt
listADT/mergeSort/List/include/: list.h
listADT/mergeSort/List/src/: list.c
listADT/mergeSort/List/tests/: tests.c
listADT/sortedList/: .gitignore  CMakeLists.txt
listADT/sortedList/List/src/: list.c
listADT/sortedList/include/: list.h  sortedList.h
listADT/sortedList/src/: main.c  sortedList.c
listADT/sortedList/tests/: tests.c
sortings-hw/: main  qsort  qsort.c  theMostFrequent  theMostFrequent.c
states-hw/states/: CMakeLists.txt
states-hw/states/include/: graph.h
states-hw/states/src/: graph.c  main.c
states-hw/states/tests/: graph
test1/task1/: main.c  (+2 more)
test2_rewrite/task1/: CMakeLists.txt
test2_rewrite/task1/include/: processFile.h
test2_rewrite/task1/src/: main.c  processFile.c
test2_rewrite/task1/tests/: testIn  tests.c
test3/test3_task2/: CMakeLists.txt
test3/test3_task2/include/: tree.h
test3/test3_task2/src/: main.c  tree.c
test3/test3_task2/tests/: tests.c
trees/expressionTree/: CMakeLists.txt
trees/expressionTree/include/: tree.h
trees/expressionTree/src/: ioAuxiliaries.c  main.c
(+337 files in other folders)
